Updated docker-compose to use arm7 compatible images

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.1"
 services:
 
     mariadb-nosh:
-      image: mariadb
+      image: linuxserver/mariadb:arm32v7-10.5.16
       restart: unless-stopped
       working_dir: /application
       volumes:
@@ -11,10 +11,10 @@ services:
         - ./key.enc:/application/key.enc
         - ./.key:/application/.key
       environment:
-        MYSQL_ROOT_PASSWORD_FILE: /run/secrets/db_root_password
+        FILE__MYSQL_ROOT_PASSWORD: /run/secrets/db_root_password
         MYSQL_DATABASE: nosh
         MYSQL_USER: asuser
-        MYSQL_PASSWORD_FILE: /run/secrets/db_password
+        FILE__MYSQL_PASSWORD: /run/secrets/db_password
       secrets:
         - db_root_password
         - db_password
@@ -43,14 +43,14 @@ services:
       command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
 
     certbot:
-      image: certbot/certbot
+      image: certbot/certbot:arm32v6-nightly
       volumes:
         - ./certbot/conf:/etc/letsencrypt
         - ./certbot/www:/var/www/certbot
       entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
 
     app-nosh:
-      image: shihjay2/nosh2:latest
+      image: shihjay2/nosh2:arm7
       working_dir: /var/www/nosh
       restart: unless-stopped
       volumes:
@@ -70,7 +70,7 @@ services:
         - nosh_app_key
 
     backup:
-      image: blacklabelops/volumerize
+      image: jwillmer/volumerize
       restart: unless-stopped
       environment:
         - TZ=Europe/Berlin
